@@ -1,3 +1,7 @@
+Fri Aug 16 13:46:31 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* kadmin.c: update addprinc and modprinc usage
+
 Thu Aug 15 20:56:13 1996  Tom Yu  <tlyu@mit.edu>
 
 	* configure.in: remove check for -ldbm and -lndbm (old old
